--- a/build.gradle
+++ b/build.gradle
@@ -26,14 +26,16 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.modelmapper:modelmapper:3.1.1'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
-	compileOnly 'org.projectlombok:lombok'
+    testImplementation 'junit:junit:4.13.1'
+    compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.junit.vintage:junit-vintage-engine:5.9.1'
 	testImplementation 'org.springframework.security:spring-security-test'
 }
 
-tasks.named('test') {
+test() {
 	useJUnitPlatform()
 }
 checkstyle {
@@ -44,5 +46,8 @@ checkstyle {
 
 checkstyleMain {
 	source ='src/main/java'
+}
+checkstyleTest {
+	source ='src/test/java'
 }
 
