--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DATABASE: postgres
     ports:
-      - '5432:5432'
+      - '5433:5432'
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready", "-d", "postgres" ]
       interval: 30s
@@ -19,10 +19,10 @@ services:
     ports:
       - '8080:8080'
     environment:
-        - SPRING_DATASOURCE_DRIVER_CLASS_NAME="org.postgresql.Driver"
-        - SPRING_DATASOURCE_URL="jdbc:postgresql://db:5432/postgres"
-        - SPRING_DATASOURCE_USERNAME="postgres"
-        - SPRING_DATASOURCE_PASSWORD="postgres"
+        - SPRING_DATASOURCE_DRIVER_CLASS_NAME=org.postgresql.Driver
+        - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/postgres
+        - SPRING_DATASOURCE_USERNAME=postgres
+        - SPRING_DATASOURCE_PASSWORD=postgres
     depends_on:
       db:
         condition: service_healthy
