--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,35 @@
-services:
-  db:
-    image: postgres:11.6
-    restart: always
-    environment:
-      POSTGRES_DB: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DATABASE: postgres
-    ports:
-      - '5433:5432'
-    healthcheck:
-      test: [ "CMD-SHELL", "pg_isready", "-d", "postgres" ]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-  api:
-    build: .
-    restart: always
-    ports:
-      - '8080:8080'
-    environment:
-        - SPRING_DATASOURCE_DRIVER_CLASS_NAME=org.postgresql.Driver
-        - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/postgres
-        - SPRING_DATASOURCE_USERNAME=postgres
-        - SPRING_DATASOURCE_PASSWORD=postgres
-    depends_on:
-      db:
-        condition: service_healthy
+  services:
+    db:
+      image: postgres:11.6
+      restart: always
+      environment:
+        POSTGRES_DB: postgres
+        POSTGRES_USER: postgres
+        POSTGRES_PASSWORD: postgres
+        PGDATA: "/var/lib/postgresql/data/pgdata"
+      ports:
+        - '5432:5432'
+      healthcheck:
+        test: [ "CMD-SHELL", "pg_isready", "-d", "postgres" ]
+        interval: 10s
+        timeout: 5s
+        retries: 5
+      volumes:
+        - ../2. Init Database:/docker-entrypoint-initdb.d
+        - .:/var/lib/postgresql/data
+    api:
+      build: .
+      restart: always
+      ports:
+        - '8080:8080'
+      environment:
+          - SPRING_DATASOURCE_DRIVER_CLASS_NAME=org.postgresql.Driver
+          - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/postgres
+          - SPRING_DATASOURCE_USERNAME=postgres
+          - SPRING_DATASOURCE_PASSWORD=postgres
+      depends_on:
+        db:
+          condition: service_healthy
+
+  volumes:
+    postgresql_data:
