Security: Add JWT

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.modelmapper:modelmapper:3.1.1'
+	implementation 'com.auth0:java-jwt:3.18.3'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
     testImplementation 'junit:junit:4.13.1'
     compileOnly 'org.projectlombok:lombok'
