DB: add trigger which add data to sales table. Validation: FIX validation

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 HELP.md
+C:\Users\Home\Desktop\Cinema-Center\src\main\resources\application.properties
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
