--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.12'
+	implementation 'io.springfox:springfox-swagger2:3.0.0'
 	implementation 'org.modelmapper:modelmapper:3.1.1'
 	implementation 'com.auth0:java-jwt:3.18.3'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
