--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,10 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=tamerlankartaev04@gmail.com
-spring.mail.password=
+spring.mail.password=huitebe
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 jwt_secret=secret
